--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -47,8 +47,8 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          # Upload entire repository
-          path: './build/reports/invert'
+          # Upload the generated pages
+          path: './build/static'
 
       - name: Deploy to GitHub Pages
         id: deployment
