--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,4 @@ org.gradle.configuration-cache=false
 org.jetbrains.compose.experimental.jscanvas.enabled=true
 
 group=com.squareup.invert
-version=0.0.1-SNAPSHOT
+version=0.0.1-dev-SNAPSHOT
