--- a/invert.gradle
+++ b/invert.gradle
@@ -15,7 +15,7 @@ settingsEvaluated {
             }
 
             dependencies {
-                classpath("com.squareup.invert:invert-plugin:0.0.1-SNAPSHOT")
+                classpath("com.squareup.invert:invert-plugin:0.0.1-dev-SNAPSHOT")
             }
         }
         afterEvaluate {
