--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,12 +1,10 @@
-name: CI
+name: Checks
 
 on:
   push:
-    branches:
-      - main
-    tags-ignore:
-      - '**'
+    branches: [ main ]
   pull_request:
+    branches: [ main ]
 
 jobs:
   test-ubuntu:
@@ -14,13 +12,18 @@ jobs:
     timeout-minutes: 25
 
     steps:
-      - uses: gradle/actions/wrapper-validation@6cec5d49d4d6d4bb982fbed7047db31ea6d38f11 # v3
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
-      - uses: actions/setup-java@99b8673ff64fbf99d8d325f52d9a5bdedb8483e9 # v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
           java-version: '17'
           check-latest: true
+
+      - name: Gradle Wrapper Validation
+        uses: gradle/actions/wrapper-validation@v3
 
       - name: Test on Ubuntu
         run: ./gradlew assemble check --no-build-cache --no-daemon --stacktrace
@@ -35,5 +38,5 @@ jobs:
       - name: require that all other jobs have passed
         uses: re-actors/alls-green@release/v1
         with:
-          allowed-skips: publish-snapshot
+          allowed-skips: publish
           jobs: ${{ toJSON(needs) }}
