Add dependency on "check" action.

--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -24,6 +24,7 @@ concurrency:
 jobs:
   # Single deploy job since we're just deploying
   deploy:
+    needs: [ check ]
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
