Added SNAPSHOT url for init script.

--- a/invert.gradle
+++ b/invert.gradle
@@ -12,6 +12,7 @@ settingsEvaluated {
                 gradlePluginPortal()
                 google()
                 mavenLocal()
+                maven { url "https://s01.oss.sonatype.org/content/repositories/snapshots" } // SNAPSHOT Versions
             }
 
             dependencies {
