--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,8 +37,23 @@ jobs:
           distribution: 'zulu'
           java-version: 17
 
-      - name: Prepare the Static Site
-        run: ./scripts/github-pages.sh
+      - name: Publish to Maven Local
+        run: ./scripts/publish.sh
+
+      - name: Run on https://github.com/spring-projects/spring-boot
+        run: ./scripts/invert-clone-and-run.sh https://github.com/spring-projects/spring-boot
+
+      - name: Create HTML
+        run: |
+          mkdir -p build/static && echo "
+          <html><head><link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/css/bootstrap.min.css' crossorigin='anonymous'></head>
+          <body><h1>Invert Reports</h1><br/><ul>
+          <li><a href='invert/invert/index.html'>Invert</a></li>
+          <li><a href='anvil/invert/index.html'>anvil</a> (https://github.com/square/anvil)</li>
+          <li><a href='tivi/invert/index.html'>tivi</a> (https://github.com/chrisbanes/tivi)</li>
+          <li><a href='nowinandroid/invert/index.html'>nowinandroid</a> (https://github.com/android/nowinandroid)</li>
+          </ul></body></html>
+          " >> build/static/index.html
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -86,7 +101,7 @@ jobs:
         with:
           allowed-skips: publish
           jobs: ${{ toJSON(needs) }}
-          
+
   publish-snapshot:
     needs: [ all-checks ]
     runs-on: ubuntu-latest
@@ -112,4 +127,3 @@ jobs:
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.SONATYPE_NEXUS_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.SONATYPE_NEXUS_PASSWORD }}
-          
