Try to get publishing working, went with multiplatform for now since it's working.

--- a/invert.gradle
+++ b/invert.gradle
@@ -17,6 +17,7 @@ settingsEvaluated {
 
             dependencies {
                 classpath("com.squareup.invert:invert-plugin:0.0.1-dev-SNAPSHOT")
+                classpath("com.squareup.invert:invert-plugin:0.0.1-dev-SNAPSHOT")
             }
         }
         afterEvaluate {
