--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,7 +4,7 @@
 #####
 [versions]
 coroutines = "1.8.0-RC"
-kotlin = "2.0.0-RC1"
+kotlin = "1.9.23"
 kotlin-one = "1.9.23"
 kotlinx-serialization = "1.6.3"
 vanniktech-maven-publish = "0.28.0"
