Add comment and fix publishing of the github page.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           # Upload the generated pages
-          path: './build/reports/invert'
+          path: './examples/build/reports/invert'
 
       - name: Deploy to GitHub Pages
         id: deployment
