--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,28 +3,47 @@
 # Do not add a dependency to an individual sample, edit the global version instead.
 #####
 [versions]
+anvil = "2.5.0-beta07"
 coroutines = "1.8.0-RC"
+dagger = "2.48"
+detekt = "1.23.3"
+javax-inject = "1"
 kotlin = "1.9.23"
 kotlin-one = "1.9.23"
 kotlinx-serialization = "1.6.3"
+ktor = "2.1.0"
 vanniktech-maven-publish = "0.28.0"
 jetbrains-compose = "1.6.10-beta01"
-#    kotlin("multiplatform").version(extra["kotlin.version"] as String)
-#    kotlin("android").version(extra["kotlin.version"] as String)
-#    id("com.android.application").version(extra["agp.version"] as String)
-#    id("com.android.library").version(extra["agp.version"] as String)
-#    id("org.jetbrains.compose").version(extra["compose.version"] as String)
+ksp = "1.9.23-1.0.20"
 
 [libraries]
+anvil-annotations = { module = "com.squareup.anvil:annotations", version.ref = "anvil" }
+dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
+dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
+javax-inject = { module = "javax.inject:javax.inject", version.ref = "javax-inject" }
+kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test-junit", version.ref = "kotlin" }
 kotlin-compiler-embeddable = { module = "org.jetbrains.kotlin:kotlin-compiler-embeddable", version.ref = "kotlin-one" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
 kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core", version.ref = "kotlinx-serialization" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+ktor-client = { module = "io.ktor:ktor-client-core", version.ref = "ktor" }
+ktor-client-logging = { module = "io.ktor:ktor-client-logging", version.ref = "ktor" }
+ktor-client-okhttp = { module = "io.ktor:ktor-client-okhttp", version.ref = "ktor" }
+ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "ktor" }
+ktor-client-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
+ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
+ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
+
 
 [plugins]
+anvil = { id = "com.squareup.anvil", version.ref = "anvil" }
 kotlin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 jetbrains-compose = { id = "org.jetbrains.compose", version.ref = "jetbrains-compose" }
+detekt = { id = "io.gitlab.arturbosch.detekt", version.ref = "detekt" }
+kotlin-kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+
 vanniktech-maven-publish = { id = "com.vanniktech.maven.publish.base", version.ref = "vanniktech-maven-publish" }
