--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,11 +1,8 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: CI
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
-  pull_request:
     branches: ["main"]
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
@@ -17,26 +14,51 @@ permissions:
 # Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
-  group: "pages"
+  group: "publish"
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
+  # Run Tests
+  test-ubuntu:
+    runs-on: ubuntu-latest
+    timeout-minutes: 25
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: 'zulu'
+          java-version: '21'
+          check-latest: true
+
+      - name: Gradle Wrapper Validation
+        uses: gradle/actions/wrapper-validation@v3
+
+      - name: Test on Ubuntu
+        run: ./gradlew assemble check --no-build-cache --no-daemon --stacktrace
+
+  # Deploy to Github Pages
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
+    needs:
+      - test-ubuntu
     if: github.repository == 'square/invert' && github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Install JDK 21
-        uses: actions/setup-java@v3
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: 21
+          java-version: '21'
+          check-latest: true
 
       - name: Run Invert on Test Projects and Generate GitHub Pages
 #        run: cd examples && ./gradlew :invert && cd ..
@@ -56,42 +78,9 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v2
 
-  test-ubuntu:
-    runs-on: ubuntu-latest
-    timeout-minutes: 25
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Setup Java
-        uses: actions/setup-java@v4
-        with:
-          distribution: 'zulu'
-          java-version: '17'
-          check-latest: true
-
-      - name: Gradle Wrapper Validation
-        uses: gradle/actions/wrapper-validation@v3
-
-      - name: Test on Ubuntu
-        run: ./gradlew assemble check --no-build-cache --no-daemon --stacktrace
-
-  all-checks:
-    if: always()
-    runs-on: ubuntu-latest
+  publish-snapshot:
     needs:
       - test-ubuntu
-
-    steps:
-      - name: require that all other jobs have passed
-        uses: re-actors/alls-green@release/v1
-        with:
-          allowed-skips: publish
-          jobs: ${{ toJSON(needs) }}
-
-  publish-snapshot:
-    needs: [ all-checks ]
     runs-on: ubuntu-latest
     if: github.repository == 'square/invert' && github.ref == 'refs/heads/main' && github.event_name != 'pull_request'
     timeout-minutes: 25
@@ -104,7 +93,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'zulu'
-          java-version: '17'
+          java-version: '21'
           check-latest: true
 
       - name: Gradle Wrapper Validation
