Converted tests to JUnit and upgraded Truth Version

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ ktor = "2.3.11"
 vanniktech-maven-publish = "0.28.0"
 jetbrains-compose = "1.6.10"
 ksp = "1.9.23-1.0.20"
+truth = "1.4.2"
 
 [libraries]
 anvil-annotations = { module = "com.squareup.anvil:annotations", version.ref = "anvil" }
@@ -33,7 +34,7 @@ ktor-client-darwin = { module = "io.ktor:ktor-client-darwin", version.ref = "kto
 ktor-client-js = { module = "io.ktor:ktor-client-js", version.ref = "ktor" }
 ktor-client-content-negotiation = { module = "io.ktor:ktor-client-content-negotiation", version.ref = "ktor" }
 ktor-serialization-kotlinx-json = { module = "io.ktor:ktor-serialization-kotlinx-json", version.ref = "ktor" }
-
+truth = { module = "com.google.truth:truth", version.ref = "truth" }
 
 
 #### Kotlin analysis ####
