--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,8 @@ kotlin.code.style=official
 android.useAndroidX=true
 group=com.squareup.invert
 version=0.0.5-dev-SNAPSHOT
+
+# https://kotlinlang.org/docs/dokka-migration.html#enable-migration-helpers
+org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+org.jetbrains.dokka.experimental.gradle.pluginMode.noWarn=true
+
