--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,19 +3,19 @@
 # Do not add a dependency to an individual sample, edit the global version instead.
 #####
 [versions]
-anvil = "2.5.0-beta07"
-coroutines = "1.9.0"
-dagger = "2.48"
-detekt = "1.23.3"
+anvil = "2.6.0"
+coroutines = "1.10.2"
+dagger = "2.56.2"
+detekt = "1.23.8"
 javax-inject = "1"
-kotlin = "2.0.0"
-kotlinx-serialization = "1.6.3"
-ktor = "2.3.11"
+kotlin = "2.1.21"
+kotlinx-serialization = "1.8.1"
+ktor = "3.1.3"
 vanniktech-maven-publish = "0.33.0"
-jetbrains-compose = "1.6.10"
-ksp = "1.9.23-1.0.20"
-truth = "1.4.2"
-dokka = "1.9.20"
+jetbrains-compose = "1.8.0"
+ksp = "2.1.21-2.0.2"
+truth = "1.4.4"
+dokka = "2.0.0"
 sarif4k = "0.6.0"
 
 [libraries]
