Allow using cache during tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
 
 
       - name: Test on Ubuntu
-        run: ./gradlew assemble check --no-build-cache --no-daemon --stacktrace
+        run: ./gradlew assemble check --no-daemon --stacktrace
 
   # Deploy to Github Pages
   github-pages:
